# airgradient-desktop

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  skills-lock.json
.agents/skills/rust-router/: SKILL.md
.github/workflows/: release.yml
assets/: com.airgradient.desktop  com.airgradient.desktop.desktop  com.airgradient.desktop.metainfo.xml  dashboard.css
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LOCAL_SERVER.md
packaging/appimage/: AppRun
packaging/flatpak/: com.airgradient.desktop.yml
resources/: airgradient.gresource.xml
snap/: snapcraft.yaml
src/: alerts.rs  app.rs  app_info.rs  config.rs  device.rs  lib.rs  main.rs  notifications.rs  state.rs
src/sensors/: air_quality.rs  mod.rs  thresholds.rs
src/ui/: app.rs  aqi_widget.rs  dashboard.rs  fetch.rs  humidity_widget.rs  mod.rs  sensor_card.rs  settings.rs  temperature_widget.rs  tray.rs
tests/: config_persistence.rs
