[package]
name = "airgradient-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.7" }
gtk4 = { package = "gtk4", version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gio = "0.21"
glib = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
url = "2.5"
